--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "chalk": "^2.4.2",
     "config": "^3.3.6",
     "ejs": "^3.1.7",
+    "qs": "^6.10.3",
     "request": "^2.88.2"
   }
 }
