--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config": "^3.3.6",
     "ejs": "^3.1.7",
     "qs": "^6.10.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "stripe": "^15.1.0"
   }
 }
